feat(upgrade): 升级至 Spring Boot 4.1.0 + JDK 21
- spring-boot.version: 3.5.16 -> 4.1.0
- spring-cloud.version: 2025.0.3 -> 2025.1.2
- spring-cloud-alibaba.version: 2025.0.0.0 -> 2025.1.0.0
- springdoc.version: 2.8.17 -> 3.1.0
- java.version / maven.compiler.release: 17 -> 21

SB4 破坏性变更修复：
- spring-boot-starter-aop 移除 -> aspectjweaver 直接声明（6个模块）
- spring-cloud-starter-gateway -> spring-cloud-starter-gateway-server-webflux
- testcontainers:junit-jupiter -> testcontainers:testcontainers-junit-jupiter
- Jackson2ObjectMapperBuilderCustomizer 包迁移 -> spring-boot-jackson2 模块
- RedisAutoConfiguration -> DataRedisAutoConfiguration
- ErrorWebExceptionHandler -> boot.webflux.error 包
- AutoConfigureMockMvc -> boot.webmvc.test.autoconfigure 包
- sa-token-spring-boot3-starter -> sa-token-spring-boot4-starter
- mybatis-plus-spring-boot3-starter -> mybatis-plus-spring-boot4-starter
- mica-ip2region 3.5.7 -> 4.1.0
- spring-boot-webmvc-test 显式声明（测试依赖）

JDK 21 新特性应用：
- 虚拟线程：spring.threads.virtual.enabled=true（Tomcat 请求线程）
- ypbin.async.virtual-threads 默认开启
- SseEmitterManager 心跳调度器改用 Thread.ofVirtual() 工厂
- 并发测试线程池改为 Executors.newVirtualThreadPerTaskExecutor()
- SignChecker.mergeJsonBody 改用 switch 类型模式
- AsyncAutoConfiguration 修复内联全限定名（@Qualifier）
- 顺序集合 API：List.getFirst() / getLast() 替换 .get(0) / .get(size-1)
- 移除废弃 new Locale() -> Locale.of()
- Dockerfile JRE 17 -> 21，GC 启用分代 ZGC